src/objects/Contact_Email_Address__c.object
<CustomObject>
    <description>used to store multiple email addresses for a contact, that can then be used to match on</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>parent record that has the email address being stored</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Addresses</relationshipLabel>
        <relationshipName>Email_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Matching_Id__c</fullName>
        <description>used to do upsert against when being maintained</description>
        <externalId>true</externalId>
        <label>Matching Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Person Email Address</label>
    <nameField>
        <displayFormat>EM{0000000}</displayFormat>
        <label>Email Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Email Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>